--- a/local/pressure-washing-norton.html
+++ b/local/pressure-washing-norton.html
@@ -36,7 +36,14 @@ footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-<!-- MAIN BUSINESS SCHEMA -->
+<!-- Open Graph Meta -->
+<meta property="og:title" content="Exterior Pressure Washing in Norton, Doncaster | Home Repairs 4U">
+<meta property="og:description" content="Professional driveway, patio, decking, and pathway cleaning in Norton. Local experts restoring outdoor areas safely. Call 07735 873694.">
+<meta property="og:image" content="https://homerepairs4u.com/images/logo.webp">
+<meta property="og:url" content="https://homerepairs4u.com/local/pressure-washing-norton-doncaster.html">
+<meta property="og:type" content="website">
+
+<!-- Main Business Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -47,17 +54,14 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "logo":"https://homerepairs4u.com/images/logo.webp",
 "image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"address":{
-"@type":"PostalAddress",
-"addressRegion":"South Yorkshire",
-"addressCountry":"GB"
-},
+"address":{"@type":"PostalAddress","addressRegion":"South Yorkshire","addressCountry":"GB"},
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":["Doncaster","Norton","Campsall","Bentley","Askern"]
+"areaServed":["Doncaster","Norton","Campsall","Bentley","Askern"],
+"geo":{"@type":"GeoCoordinates","latitude":53.520,"longitude":-1.120}
 }
 </script>
 
-<!-- SERVICE SCHEMA -->
+<!-- Service Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -68,6 +72,34 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "provider":{"@id":"https://homerepairs4u.com/#business"},
 "areaServed":{"@type":"Place","name":"Norton, Doncaster"},
 "serviceType":["Driveway cleaning","Patio cleaning","Decking cleaning","Exterior surface cleaning"]
+}
+</script>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
+{"@type":"ListItem","position":2,"name":"Local Services","item":"https://homerepairs4u.com/local/"},
+{"@type":"ListItem","position":3,"name":"Pressure Washing Norton","item":"https://homerepairs4u.com/local/pressure-washing-norton-doncaster.html"}
+]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"How often should outdoor surfaces be cleaned?","acceptedAnswer":{"@type":"Answer","text":"Most surfaces benefit from annual cleaning, while heavily used or shaded areas may need cleaning every 6-9 months."}},
+{"@type":"Question","name":"Are your cleaning methods safe for all surfaces?","acceptedAnswer":{"@type":"Answer","text":"Yes, we adjust water pressure, nozzles, and cleaning methods to suit each surface safely."}},
+{"@type":"Question","name":"Do you remove moss, algae, and weeds?","acceptedAnswer":{"@type":"Answer","text":"Our team removes moss, algae, lichen, and weeds to restore surfaces and improve safety."}},
+{"@type":"Question","name":"Do you provide sealing or re-sanding?","acceptedAnswer":{"@type":"Answer","text":"Optional re-sanding and sealing services help protect surfaces and slow regrowth."}},
+{"@type":"Question","name":"Can I get an estimate before booking?","acceptedAnswer":{"@type":"Answer","text":"Yes, our online calculator provides an instant estimate, and we can offer free on-site assessments."}}
+]
 }
 </script>
 
@@ -85,88 +117,38 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <h1>Exterior Pressure Washing in Norton, Doncaster</h1>
 
-<p>Home Repairs 4U provides professional exterior pressure washing for residential and small commercial properties throughout Norton and nearby areas of Doncaster. Outdoor surfaces are constantly exposed to the elements, and over time they naturally accumulate dirt, algae, moss, traffic residue, and general grime.</p>
+<p>Home Repairs 4U provides professional pressure washing for homes and small commercial properties in Norton and surrounding areas. Outdoor surfaces such as driveways, patios, decking, and pathways naturally accumulate dirt, moss, algae, and grime over time.</p>
 
-<p>In areas with shaded gardens, tree coverage, and damp conditions, surface growth can develop quickly. Driveways darken, patios become slippery, and paths lose their original appearance. Our pressure washing service is designed to deal with these issues properly, restoring surfaces safely rather than simply rinsing them.</p>
+<p>Our approach is safe, effective, and tailored to each surface. We restore areas to a clean, attractive, and safe condition without causing damage, preserving the longevity of your outdoor spaces.</p>
 
-<p>We focus on careful preparation, correct pressure control, and a methodical approach to cleaning. This ensures outdoor areas look noticeably cleaner while remaining structurally sound and safe to use.</p>
+<h2>Why Regular Cleaning Matters</h2>
 
-<h2>Local Experience That Makes a Difference</h2>
+<p>Unchecked moss and algae growth can make surfaces slippery and accelerate deterioration. Regular cleaning keeps areas safe, improves appearance, and reduces maintenance costs in the long term. It also enhances curb appeal and can make homes more inviting for visitors, tenants, or buyers.</p>
 
-<p>Properties in Norton vary in age, layout, and surface materials. Some areas feature older block paving and concrete, while others include newer patios, decking, and landscaped gardens. Each surface responds differently to cleaning, which is why experience matters.</p>
+<h2>How We Work</h2>
 
-<p>We regularly work on homes with front driveways, rear patios, garden paths, steps, and boundary walls. Understanding the local environment allows us to choose techniques that are effective without being overly aggressive, helping surfaces last longer.</p>
+<p>We begin with a thorough inspection to understand the surface type and condition. Pressure levels, nozzles, and cleaning methods are adjusted accordingly. Heavily soiled areas or persistent moss may receive pre-treatment. Optional re-sanding or sealing provides lasting protection.</p>
 
-<h2>Why Regular Exterior Cleaning Is Worthwhile</h2>
-
-<p>Routine outdoor cleaning is not just about appearance. Moss, algae, and lichen trap moisture and can slowly break down surface materials. This is particularly noticeable on block paving joints, timber decking, and porous stone.</p>
-
-<p>By removing this buildup, pressure washing helps to:</p>
+<h2>Who We Serve</h2>
 
 <ul>
-<li>Reduce slip risks around entrances and walkways</li>
-<li>Improve drainage on paved surfaces</li>
-<li>Extend the lifespan of driveways and patios</li>
-<li>Maintain a well-kept look year-round</li>
-<li>Reduce the need for repairs or replacement</li>
+<li>Homeowners seeking a refreshed outdoor space</li>
+<li>Landlords preparing properties for tenants</li>
+<li>Small businesses wanting a professional exterior appearance</li>
+<li>Property sellers improving kerb appeal</li>
 </ul>
 
-<p>Many customers are surprised by how much brighter and cleaner their outdoor areas look once years of dirt and growth have been removed.</p>
-
-<h2>How We Carry Out Pressure Washing</h2>
-
-<p>Every job starts with a visual assessment of the area to be cleaned. This allows us to identify the surface type, condition, and any areas that may need special attention.</p>
-
-<p>Pressure levels are adjusted to suit the material. For example, block paving and concrete can tolerate higher pressure than timber decking or older stone. Where organic growth is heavy, treatments may be applied first to loosen it before washing begins.</p>
-
-<p>Once cleaning is complete, optional services such as re-sanding or sealing can be carried out. These help protect the surface and slow down future regrowth, especially on block paving and patios.</p>
-
-<h2>Who This Service Is For</h2>
-
-<p>Our exterior cleaning service is suitable for a wide range of customers in Norton, including:</p>
-
-<ul>
-<li>Homeowners looking to refresh outdoor spaces</li>
-<li>Landlords preparing a property for new tenants</li>
-<li>Small businesses wanting a cleaner frontage</li>
-<li>Home sellers improving kerb appeal before viewings</li>
-</ul>
-
-<p>Whether the area is large or small, we approach every job with the same attention to detail.</p>
-
-<h2>Price Guide Calculator</h2>
-
-<p>The calculator below provides a general estimate based on surface size and selected options. It is designed as a guide only, with final pricing confirmed before work begins.</p>
+<h2>Price Calculator</h2>
 
 <form id="quoteForm">
-
 <label for="sqm">Surface size (approx. m²)</label>
 <input type="number" id="sqm" min="1" step="0.01" required>
 
-<div class="form-row">
-<input type="checkbox" id="wash" checked>
-<label for="wash">Standard pressure washing</label>
-</div>
-
-<div class="form-row">
-<input type="checkbox" id="bio">
-<label for="bio">Moss and algae treatment</label>
-</div>
-
-<div class="form-row">
-<input type="checkbox" id="extra">
-<label for="extra">Heavy staining removal</label>
-</div>
-
-<div class="form-row">
-<input type="checkbox" id="sand">
-<label for="sand">Block paving re-sanding</label>
-</div>
-
-<div class="form-row">
-<input type="checkbox" id="seal">
-<label for="seal">Protective sealing</label>
-</div>
+<div class="form-row"><input type="checkbox" id="wash" checked><label for="wash">Standard pressure washing</label></div>
+<div class="form-row"><input type="checkbox" id="bio"><label for="bio">Moss and algae treatment</label></div>
+<div class="form-row"><input type="checkbox" id="extra"><label for="extra">Heavy stain removal</label></div>
+<div class="form-row"><input type="checkbox" id="sand"><label for="sand">Block paving re-sanding</label></div>
+<div class="form-row"><input type="checkbox" id="seal"><label for="seal">Protective sealing</label></div>
 
 <button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
@@ -177,54 +159,44 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 function calculateQuote(){
 const sqm=parseFloat(document.getElementById('sqm').value);
 if(!sqm||sqm<=0){alert("Please enter a valid area size.");return;}
-
 let total=55;
 let items=["Service setup: £55.00"];
-
 if(wash.checked){let p=sqm*2.75; total+=p; items.push(`Pressure washing: £${p.toFixed(2)}`);}
 if(bio.checked){let p=sqm*0.9; total+=p; items.push(`Organic growth treatment: £${p.toFixed(2)}`);}
 if(extra.checked){let p=sqm*0.8; total+=p; items.push(`Heavy stain removal: £${p.toFixed(2)}`);}
 if(sand.checked){let p=sqm*4.1; total+=p; items.push(`Re-sanding: £${p.toFixed(2)}`);}
 if(seal.checked){let p=sqm*4.6; total+=p; items.push(`Surface sealing: £${p.toFixed(2)}`);}
-
-document.getElementById("quoteResult").innerHTML=
-`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul>
-<p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`;
+document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`;
 }
 </script>
 
-<h2>Surfaces We Commonly Clean</h2>
+<h2>Our Services</h2>
 
 <h3>Driveways</h3>
-<p>Driveways are cleaned to remove oil marks, weeds, algae and general grime. Block paving can be re-sanded after cleaning to restore joint stability and improve appearance.</p>
+<p>We clean driveways to remove oil marks, algae, moss, and grime. Re-sanding restores block paving joints.</p>
 <a href="#driveway"><img src="/images/driveway-pressure-wash.webp" alt="Driveway cleaning Norton" class="service-image"></a>
 <div id="driveway" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt=""></a></div>
 
-<h3>Patios and Garden Paving</h3>
-<p>Patios are carefully cleaned to remove black spot and surface growth while protecting the joints and slabs from unnecessary wear.</p>
+<h3>Patios & Paving</h3>
+<p>Patios are cleaned carefully to remove moss, weeds, and black spot while protecting joints.</p>
 <a href="#patio"><img src="/images/patio-jet-wash.webp" alt="Patio cleaning Norton" class="service-image"></a>
 <div id="patio" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt=""></a></div>
 
 <h3>Decking</h3>
-<p>Decking is washed using controlled pressure to lift grime and algae without damaging the surface. Sealing can be added to help protect it from moisture and wear.</p>
+<p>Decking is washed with controlled pressure to preserve timber while removing grime. Optional sealing extends lifespan.</p>
 <a href="#deck"><img src="/images/deck.webp" alt="Decking cleaning Norton" class="service-image"></a>
 <div id="deck" class="lightbox"><a href="#"><img src="/images/deck.webp" alt=""></a></div>
 
-<h3>Walls, Steps and Paths</h3>
-<p>We also clean walls, steps and pathways to improve appearance and reduce slip risks around entrances and garden areas.</p>
+<h3>Walls, Steps & Pathways</h3>
+<p>We clean walls, steps, and paths to improve appearance and safety around your property.</p>
 <a href="#walls"><img src="/images/pressure-wash-1.webp" alt="Path and wall cleaning Norton" class="service-image"></a>
 <div id="walls" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt=""></a></div>
 
-<h2>Aftercare and Maintenance Advice</h2>
+<h2>Aftercare & Maintenance</h2>
+<p>Regular sweeping, removing debris, and occasional spot cleaning will keep surfaces in good condition. Sealing or re-sanding can reduce maintenance and prolong the life of your surfaces.</p>
 
-<p>After cleaning, keeping surfaces clear of leaves and debris can help slow down regrowth. Simple steps such as regular sweeping and improving drainage can make a noticeable difference.</p>
-
-<p>For block paving and patios, sealing offers longer-term protection by reducing moisture absorption and making future cleaning easier. We are happy to advise on suitable options based on how the area is used.</p>
-
-<h2>Arrange Your Cleaning Service</h2>
-
-<p>If your outdoor areas would benefit from professional cleaning, Home Repairs 4U is happy to help. We work throughout Norton and surrounding parts of Doncaster and can discuss your requirements before booking.</p>
-
+<h2>Book Your Service</h2>
+<p>Contact Home Repairs 4U today to arrange professional pressure washing for your Norton property. We provide a friendly, reliable service with attention to detail.</p>
 <div style="text-align:center;margin:36px 0;">
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
 </div>
