--- a/test.html
+++ b/test.html
@@ -3,9 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Professional Pressure Washing in Campsall, Doncaster | Driveways, Patios & Decking</title>
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-campsall.html">
-<meta name="description" content="Expert pressure washing in Campsall, Doncaster for driveways, patios, decking, walls, and pathways. Local professionals restoring outdoor surfaces. Call 07735 873694.">
+
+<title>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster | Home Repairs 4U</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html">
+
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Local, reliable service for homes and small businesses. Call 07735 873694.">
+
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
@@ -18,7 +22,7 @@ header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px sol
 .call-btn:hover{background:#333;}
 main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
 h1,h2,h3{color:#111;}
-label{font-weight:bold;display:block;margin-bottom:6px;cursor:pointer;}
+label{font-weight:bold;display:block;margin-bottom:6px;}
 input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
 .form-row input{width:22px;height:22px;}
@@ -32,49 +36,47 @@ footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-<!-- LocalBusiness Schema -->
+<!-- Business Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"HomeAndConstructionBusiness",
-"@id":"https://homerepairs4u.com/local/pressure-washing-campsall.html#business",
-"name":"Home Repairs 4U – Campsall Pressure Washing",
-"url":"https://homerepairs4u.com/local/pressure-washing-campsall.html",
+"@id":"https://homerepairs4u.com/#business",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"logo":"https://homerepairs4u.com/images/logo.webp",
 "image":"https://homerepairs4u.com/images/logo.webp",
 "telephone":"+447735873694",
-"description":"Professional pressure washing services in Campsall, Doncaster for driveways, patios, decking, walls, and pathways.",
-"address":{"@type":"PostalAddress","addressLocality":"Campsall","addressRegion":"South Yorkshire","addressCountry":"GB"},
-"geo":{"@type":"GeoCoordinates","latitude":53.583,"longitude":-1.158},
+"address":{"@type":"PostalAddress","addressRegion":"South Yorkshire","addressCountry":"GB"},
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":[{"@type":"Place","name":"Campsall"},{"@type":"Place","name":"Doncaster"},{"@type":"Place","name":"Skellow"},{"@type":"Place","name":"Askern"}],
-"serviceType":["Pressure washing","Driveway cleaning","Patio cleaning","Decking cleaning","Exterior surface cleaning"]
+"areaServed":["Sprotbrough","Doncaster","Bentley","Scawthorpe","Balby"],
+"priceRange":"£50–£3000"
 }
 </script>
 
-<!-- FAQ Schema -->
+<!-- Service Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{"@type":"Question","name":"Do you clean both residential and commercial properties in Campsall?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide pressure washing for homes, offices, and small commercial properties throughout Campsall and nearby areas."}},
-{"@type":"Question","name":"How often should I have my surfaces cleaned?","acceptedAnswer":{"@type":"Answer","text":"For most outdoor surfaces, annual cleaning is sufficient. High-traffic or shaded areas may benefit from cleaning every 6–9 months."}},
-{"@type":"Question","name":"Is pressure washing safe for all surfaces?","acceptedAnswer":{"@type":"Answer","text":"We adjust water pressure, nozzles, and cleaning techniques to suit each surface, ensuring effective cleaning without damage."}},
-{"@type":"Question","name":"Can moss, algae, and weeds be removed?","acceptedAnswer":{"@type":"Answer","text":"Our team effectively removes moss, algae, lichen, and weeds, restoring surfaces to a clean, safe condition."}},
-{"@type":"Question","name":"Do you provide surface maintenance after cleaning?","acceptedAnswer":{"@type":"Answer","text":"Optional treatments such as re-sanding, sealing, and anti-algae applications protect surfaces and reduce future maintenance."}},
-{"@type":"Question","name":"How long does a typical pressure washing job take?","acceptedAnswer":{"@type":"Answer","text":"Most driveways and patios take 1–2 hours depending on size and condition, while decking or larger areas may take longer."}},
-{"@type":"Question","name":"Can I get a quote before the work starts?","acceptedAnswer":{"@type":"Answer","text":"Our online calculator provides instant estimates, and we offer free on-site assessments for accurate pricing."}},
-{"@type":"Question","name":"Do you use chemicals during cleaning?","acceptedAnswer":{"@type":"Answer","text":"We use eco-friendly cleaning solutions only when necessary, with plain water preferred for most surfaces."}},
-{"@type":"Question","name":"Will pressure washing damage my driveway or patio?","acceptedAnswer":{"@type":"Answer","text":"Our team adjusts pressure settings for each surface to prevent damage while delivering a thorough clean."}},
-{"@type":"Question","name":"Do you clean decking safely?","acceptedAnswer":{"@type":"Answer","text":"Wooden decking is cleaned carefully to remove grime and algae without roughening the wood or causing splintering."}},
-{"@type":"Question","name":"Can you clean walls and fences?","acceptedAnswer":{"@type":"Answer","text":"Brick, render, stone, and timber walls and fences are cleaned to remove pollutants, moss, and algae, restoring appearance."}},
-{"@type":"Question","name":"Do you offer same-day or next-day service?","acceptedAnswer":{"@type":"Answer","text":"Whenever possible, we provide same-day or next-day appointments depending on location and availability."}},
-{"@type":"Question","name":"What areas do you serve around Campsall?","acceptedAnswer":{"@type":"Answer","text":"We serve Campsall, Doncaster, Skellow, Askern, Carcroft, Norton, Bentley, and all nearby communities within a 10-mile radius."}},
-{"@type":"Question","name":"Can pressure washing remove oil and tyre marks?","acceptedAnswer":{"@type":"Answer","text":"Yes, our professional equipment and cleaning methods can remove oil stains, tyre marks, and other stubborn contaminants."}},
-{"@type":"Question","name":"Do I need to prepare the area before cleaning?","acceptedAnswer":{"@type":"Answer","text":"We recommend clearing movable furniture or ornaments. Heavy items and delicate areas are handled with care."}},
-{"@type":"Question","name":"Can I combine multiple services in one visit?","acceptedAnswer":{"@type":"Answer","text":"Yes, driveway, patio, decking, and wall cleaning can be done together for convenience and efficiency."}},
-{"@type":"Question","name":"Are you fully insured?","acceptedAnswer":{"@type":"Answer","text":"Home Repairs 4U is fully insured, giving you peace of mind while we clean your property."}},
-{"@type":"Question","name":"Do you offer maintenance tips after cleaning?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide advice on keeping surfaces clean, preventing algae, and prolonging the lifespan of your outdoor areas."}}
+"@type":"Service",
+"@id":"https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html#service",
+"name":"Gutter Clearing, Cleaning and Replacement in Sprotbrough",
+"description":"Professional gutter clearing, cleaning, repairs and full replacement for residential and small commercial properties in Sprotbrough, Doncaster.",
+"provider":{"@id":"https://homerepairs4u.com/#business"},
+"areaServed":{"@type":"Place","name":"Sprotbrough, Doncaster"},
+"serviceType":["Gutter clearing","Gutter cleaning","Gutter repairs","Gutter replacement"]
+}
+</script>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
+{"@type":"ListItem","position":2,"name":"Local Services","item":"https://homerepairs4u.com/local/"},
+{"@type":"ListItem","position":3,"name":"Gutter Services Sprotbrough","item":"https://homerepairs4u.com/local/gutter-services-sprotbrough-doncaster.html"}
 ]
 }
 </script>
@@ -84,35 +86,39 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <header>
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
-<br><a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
+<br>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
 </header>
 
 <main>
 
-<h1>Professional Pressure Washing in Campsall, Doncaster</h1>
+<h1>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster</h1>
 
-<p>Home Repairs 4U provides professional pressure washing to restore driveways, patios, decking, walls, and pathways across Campsall. Outdoor surfaces naturally accumulate dirt, moss, algae, and grime over time. Our cleaning methods safely remove buildup, leaving your property clean, safe, and visually appealing.</p>
+<p>Home Repairs 4U provides professional gutter services for homeowners and small businesses across Sprotbrough. From routine gutter clearing and cleaning to repairs and full gutter replacement, we help protect your property from water damage, damp issues, and structural problems.</p>
 
-<p>We serve both residential and small commercial properties, tailoring our approach for each surface type. Careful preparation and professional equipment deliver deep, effective cleaning without causing damage.</p>
+<p>Blocked or damaged gutters are one of the most common causes of exterior property issues. Overflowing rainwater can lead to damp walls, damaged brickwork, rotting fascia boards, and water pooling around foundations. Our experienced team delivers reliable, cost-effective gutter solutions tailored to your property.</p>
 
-<p>Shaded areas in Campsall are particularly prone to moss and algae. We remove growth safely and offer optional treatments like sealing or re-sanding to protect surfaces for longer.</p>
-
-<h2>How We Work</h2>
-
-<p>Our team starts with a detailed inspection to assess the surface material, condition, and areas needing special care. This allows us to adjust water pressure, cleaning solutions, and techniques for optimal results. Stubborn dirt, moss, and algae are treated before cleaning, ensuring an even, thorough clean. Optional maintenance like re-sanding and sealing extends the lifespan of your surfaces.</p>
-
-<h2>Instant Quote Calculator</h2>
+<h2>Instant Gutter Quote Calculator</h2>
 
 <form id="quoteForm">
-<label for="sqm">Surface area in square metres</label>
-<input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
+<label for="metres">Total gutter length (metres)</label>
+<input type="number" id="metres" min="1" step="0.1" required>
 
-<div class="form-row"><input type="checkbox" id="jetwash" checked><label for="jetwash">Standard pressure wash</label></div>
-<div class="form-row"><input type="checkbox" id="fungicide"><label for="fungicide">Moss & algae treatment</label></div>
-<div class="form-row"><input type="checkbox" id="hardbrush"><label for="hardbrush">Heavy dirt scrubbing</label></div>
-<div class="form-row"><input type="checkbox" id="resanding"><label for="resanding">Block paving re-sanding</label></div>
-<div class="form-row"><input type="checkbox" id="sealing"><label for="sealing">Surface sealing</label></div>
+<div class="form-row">
+<input type="checkbox" id="clearing">
+<label for="clearing">Gutter clearing (£5 per metre)</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="cleaning">
+<label for="cleaning">Gutter cleaning (£5 per metre)</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="replacement">
+<label for="replacement">Gutter replacement (£21.50 per metre)</label>
+</div>
 
 <button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
@@ -121,45 +127,54 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <script>
 function calculateQuote(){
-const sqm=parseFloat(document.getElementById('sqm').value);
-if(!sqm||sqm<=0){alert("Enter a valid number.");return;}
-let total=50;
-let items=["Base fee: £50.00"];
-if(jetwash.checked){let p=sqm*2.7;total+=p;items.push(`Pressure wash: £${p.toFixed(2)}`);}
-if(fungicide.checked){let p=sqm*0.85;total+=p;items.push(`Moss & algae treatment: £${p.toFixed(2)}`);}
-if(hardbrush.checked){let p=sqm*0.75;total+=p;items.push(`Heavy dirt scrubbing: £${p.toFixed(2)}`);}
-if(resanding.checked){let p=sqm*3.9;total+=p;items.push(`Re-sanding: £${p.toFixed(2)}`);}
-if(sealing.checked){let p=sqm*4.5;total+=p;items.push(`Sealing: £${p.toFixed(2)}`);}
-document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Total: £${total.toFixed(2)}</strong></p>`;
+const m=parseFloat(document.getElementById('metres').value);
+if(!m||m<=0){alert("Please enter a valid length.");return;}
+let total=0;
+let items=[];
+if(clearing.checked){let p=m*5; total+=p; items.push(`Gutter clearing: £${p.toFixed(2)}`);}
+if(cleaning.checked){let p=m*5; total+=p; items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
+if(replacement.checked){let p=m*21.5; total+=p; items.push(`Gutter replacement: £${p.toFixed(2)}`);}
+document.getElementById("quoteResult").innerHTML=
+items.length
+? `<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`
+: "<p>Please select at least one service.</p>";
 }
 </script>
 
-<h2>Our Services</h2>
+<h2>Why Gutter Maintenance Is Essential</h2>
 
-<h3>Driveway Cleaning</h3>
-<p>We remove dirt, oil, tyre marks, moss, and algae from block paving, tarmac, and concrete driveways. Optional re-sanding restores joint stability and prevents weed growth.</p>
-<a href="#driveway-lightbox"><img src="/images/driveway-pressure-wash.webp" alt="Driveway cleaning Campsall" class="service-image"></a>
-<div id="driveway-lightbox" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt="Driveway enlarged"></a></div>
+<p>Gutters play a critical role in directing rainwater safely away from your home. When they become blocked with leaves, moss, or debris, water can overflow and soak into brickwork or foundations. Regular gutter maintenance reduces the risk of damp, mould, and costly structural repairs.</p>
 
-<h3>Patio & Paving Cleaning</h3>
-<p>Patios are cleaned safely to remove moss, weeds, and black spot without damaging joints or stone surfaces.</p>
-<a href="#patio-lightbox"><img src="/images/patio-jet-wash.webp" alt="Patio cleaning Campsall" class="service-image"></a>
-<div id="patio-lightbox" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt="Patio enlarged"></a></div>
+<p>Properties in Sprotbrough are surrounded by trees and greenery, which increases the likelihood of seasonal blockages. Proactive clearing and cleaning ensures your gutters function properly all year round.</p>
 
-<h3>Decking Cleaning</h3>
-<p>Decking is gently cleaned to remove grime and algae while preserving wood integrity. Optional sealing prolongs lifespan and appearance.</p>
-<a href="#deck-lightbox"><img src="/images/deck.webp" alt="Decking cleaning Campsall" class="service-image"></a>
-<div id="deck-lightbox" class="lightbox"><a href="#"><img src="/images/deck.webp" alt="Decking enlarged"></a></div>
+<h2>Our Gutter Services</h2>
 
-<h3>Walls, Steps & Pathways</h3>
-<p>We clean walls, steps, and pathways, removing embedded dirt, moss, and algae to improve safety and enhance visual appeal.</p>
-<a href="#walls-lightbox"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways cleaning Campsall" class="service-image"></a>
-<div id="walls-lightbox" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways enlarged"></a></div>
+<h3>Gutter Clearing</h3>
+<p>We remove leaves, moss, silt, and debris from gutters using safe access equipment. Clearing restores proper water flow and prevents overflows during heavy rainfall.</p>
 
-<!-- Expanded FAQ inserted here (see previous code snippet) -->
+<h3>Gutter Cleaning</h3>
+<p>Cleaning improves the appearance of gutters while removing grime and buildup that can cause long-term deterioration. This is ideal for properties where gutters are visible from ground level.</p>
 
-<h2>Book Your Campsall Pressure Washing Service</h2>
-<p>Call Home Repairs 4U today to restore your driveways, patios, decking, and pathways. Our professional team ensures surfaces are clean, safe, and visually appealing.</p>
+<h3>Gutter Repairs</h3>
+<p>Minor issues such as leaking joints, sagging sections, or loose brackets are repaired promptly to restore performance and prevent further damage.</p>
+
+<h3>Gutter Replacement</h3>
+<p>Where gutters are beyond repair, we offer full replacement using durable, modern materials. New guttering improves drainage, appearance, and long-term reliability.</p>
+
+<h2>Who We Work With</h2>
+
+<ul>
+<li>Homeowners maintaining their property</li>
+<li>Landlords preparing rentals</li>
+<li>Property managers</li>
+<li>Small businesses</li>
+<li>Home sellers improving kerb appeal</li>
+</ul>
+
+<h2>Book Gutter Services in Sprotbrough</h2>
+
+<p>If your gutters are overflowing, leaking, or showing signs of wear, contact Home Repairs 4U today. We provide dependable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.</p>
+
 <div style="text-align:center;margin:36px 0;">
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
 </div>
@@ -167,7 +182,7 @@ document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</
 </main>
 
 <footer>
-© Home Repairs 4U | Pressure Washing Campsall, Doncaster
+© Home Repairs 4U | Gutter Services Sprotbrough, Doncaster
 <br>
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/fence-installation.html">Fencing</a>
